@@ -23,7 +23,6 @@ import java.util.List;
 import java.util.Map;
 import java.util.Optional;
 import java.util.concurrent.ConcurrentHashMap;
-import java.util.stream.Collectors;
 
 
 /**
@@ -37,7 +36,7 @@ import java.util.stream.Collectors;
 public class CassandraConnectionManagerImpl implements CassandraConnectionManager {
 
     private static final Map<String, CqlSession> cassandraSessionMap = new ConcurrentHashMap<>(2);
-    //private static final log log = logFactory.getlog(CassandraConnectionManagerImpl.class);
+    public static final String DATACENTER_1 = "datacenter1";
     private static CqlSession session;
 
     @Override
@@ -86,16 +85,16 @@ public class CassandraConnectionManagerImpl implements CassandraConnectionManage
             List<String> hosts = Arrays.asList(cassandraHost.split(","));
             List<InetSocketAddress> contactPoints = hosts.stream()
                     .map(host -> new InetSocketAddress(host.trim(), 9042)) // Assuming default port 9042
-                    .collect(Collectors.toList());
+                    .toList();
             List<String> contactPointsString = hosts.stream()
                     .map(host -> host.trim() + ":9042") // Ensure proper host:port format
-                    .collect(Collectors.toList());
+                    .toList();
             ConsistencyLevel consistencyLevel = getConsistencyLevel();
             String consistencyLevelName = consistencyLevel != null ? consistencyLevel.name() : ConsistencyLevel.LOCAL_ONE.name(); // or default fallback
             DriverConfigLoader loader = DriverConfigLoader.programmaticBuilder()
                     .withStringList(DefaultDriverOption.CONTACT_POINTS, contactPointsString)
                     .withString(DefaultDriverOption.REQUEST_CONSISTENCY, consistencyLevelName)
-                    .withString(DefaultDriverOption.LOAD_BALANCING_LOCAL_DATACENTER, "datacenter1")
+                    .withString(DefaultDriverOption.LOAD_BALANCING_LOCAL_DATACENTER, DATACENTER_1)
                     .withInt(DefaultDriverOption.CONNECTION_POOL_LOCAL_SIZE,
                             Integer.parseInt(cache.getProperty(Constants.CORE_CONNECTIONS_PER_HOST_FOR_LOCAL)))
                     .withInt(DefaultDriverOption.CONNECTION_POOL_REMOTE_SIZE,
@@ -112,14 +111,14 @@ public class CassandraConnectionManagerImpl implements CassandraConnectionManage
             if (StringUtils.isNotBlank(keySpaceName)) {
                 sessionWithKeyspaces = CqlSession.builder()
                         .addContactPoints(contactPoints)
-                        .withLocalDatacenter("datacenter1")
+                        .withLocalDatacenter(DATACENTER_1)
                         .withKeyspace(keySpaceName)
                         .withConfigLoader(loader)
                         .build();
             } else {
                 sessionWithKeyspaces = CqlSession.builder()
                         .addContactPoints(contactPoints)
-                        .withLocalDatacenter("datacenter1")
+                        .withLocalDatacenter(DATACENTER_1)
                         .withConfigLoader(loader)
                         .build();
             }
@@ -169,7 +168,7 @@ public class CassandraConnectionManagerImpl implements CassandraConnectionManage
                 Map<CqlIdentifier, TableMetadata> tables = optionalKeyspace.get().getTables();
                 return tables.keySet().stream()
                         .map(CqlIdentifier::toString)
-                        .collect(Collectors.toList());
+                        .toList();
             } else {
                 throw new CustomException(
                         Constants.ERROR,
